--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pm2-windows-service",
+  "name": "pm2-windows-service-netfx-4",
   "version": "0.1.0",
   "description": "Install PM2 as a service on windows",
   "main": "src/index.js",
